apps/generic/overlays/lidarr/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  ports:
    - name: http
      port: 8686
      protocol: TCP
      targetPort: http
